tests/semantic_cases/invalid/duplicate_import_alias.ob0
(* INVALID: same import alias is declared more than once *)
MODULE Main;
IMPORT IO, IO;
BEGIN
END Main.
